@@ -1,4 +1,4 @@
-DIST cherrymusic-0.24.1.tar.gz 539055 SHA256 052c42fdcabf233610323bdcfea4e56bfdda7266a9229657b2603ea8b2bad378 SHA512 190ed826bb80df4574a475e8784eec100e1e1f69fdc67ca656be0a97c7e5a80534ffac15bd233083c573f3710118d966bbca948b9be608b5706705a8494daca8 WHIRLPOOL eca708aaebc2607c402fc1f749cf8044bde3fa105b758729d2dfedb5567478883a8c43dfb244aec5d7a95b7fdb77e49cf25fff129bc8308a9aea40ad15c749d9
-EBUILD cherrymusic-0.24.1.ebuild 562 SHA256 a2c98a5a715aa93e9d8408abda567e5b75c9b5e08e09906bf5bde9afafc88cd8 SHA512 71573999c7d3f09c89b74da0a27d8bce6e77a3e101037cbebafe460bc9bc03235f5506c6f617da4c57bef6d9a27350e9ff4ecbac84f2ded50ec0e06ae02d2375 WHIRLPOOL e73bf86e827c814ea6d3e2377638c89e359452fc1ff2967002c3aec9e2d6c538d1413f19d42f5247e36d51050b931b6ce844537b22e9e49b0be23a2970346261
-MISC ChangeLog 721 SHA256 145776da4adf31bb7f85b2bc010e73182e689b81ffea23ea29c9b3eb84e9074d SHA512 f83c0fe0455ecccc8fface3af9595c146bb2f21c81951e2ced9f10dc1ef68de914f5240fe294e4a70e1d7244252968da3b803975125383b6300dc0f4ddbbe039 WHIRLPOOL 3df5ba14da5768bb80571173b6e1b561a97094d8d0dad8d746960c6fa797e5c0df109f288910ddecf0dcf6c95a6b2d9ed5b2e56bfedd5c7d036b0c93a2931317
+DIST cherrymusic-0.25.1.tar.gz 764770 SHA256 c86f9d3dc4982751416153b74d4844bd30f026eeeabeba27d574e4b92dd21f1d SHA512 dbe3a0cec82ca075b7e716fc001073127201dec4379dc667989e3f7edfc720a62eed803393394ae7d20432aec1d20f491d2b69dc4661c6d1cea26b710b0bc6cf WHIRLPOOL 0bcbd9b1fe55107fc795fc2c1f56a2a686dbe251530824ef41392093254e6e0694da6d5deb00beff5098456ea48b09b608ecc2b041545ff2a20834d842b4429a
+EBUILD cherrymusic-0.25.1.ebuild 701 SHA256 2468e3248c821e5b66192aef3fa23b9d9c62bf449932c989333c836c40d1c9ea SHA512 8e9c323dafef92ef3f0ea9be8fb89368d680dc1a7adb5d5d6cf0dfe842c035d47ae2eac854516984b7470d5d1df9f190bda4a6a45995b3ed446c5a0d4fd6524b WHIRLPOOL a756cccbd2e7b148785c9a8e4e6e6815346dc86d5a13d998012706a9f81d0d71fbdee856d50121eca57a71497caf4d905054b26c35fc0ab92e55e41ddd087f5f
+MISC ChangeLog 907 SHA256 59570df76453b3d22a178ee11a4342529036050700fd1e04627f1fc78d370a56 SHA512 15b7b1d39ef78233157d631aced1359bdf8580b643b0e3542d9fc32a2e723509111b48582f80a242c8b08f2676b614bdea87c5f85d5e0f071dea8ae3c6852b57 WHIRLPOOL 39aabdb93543b3706ef178c1481cca0751b0f814205649156b67c0fab507b587d70edd303dfe09f0c70e0cf439bf258aa5e2c2ea6d341f76bfd731effd7118a9
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
